# sexpander

./: .gitignore  AudioPluginHost.app  CLAUDE.md  CMakeLists.txt  Plugin.filtergraph  README.md  clean.sh  run.sh
include/: CircularBuffer.h  GainComputer.h  PluginEditor.h  PluginProcessor.h
source/: CircularBuffer.cpp  GainComputer.cpp  PluginEditor.cpp  PluginProcessor.cpp
